--- a/main.css
+++ b/main.css
@@ -1,10 +1,191 @@
-
-
-.dropdown-menu {
-    width: 30%;
-    height: 660px;
+html, body {
+    background-color: #4c4a49;
+    color: white;
 }
 
+
+/*
+    ============================================
+    General Styles + Graphic stuff
+    ============================================
+*/
+
+.main-content {
+    height: 100%;
+    width: 70%;
+    margin: 0 auto;
+    background-color: #322f2f;
+    padding: 30px;
+}
+
+.divide {
+    width: 100%;
+    height: 13px;
+    background: #0f0f0f;
+    margin-top: -30px;
+    margin-bottom: 10px;
+}
+
+.thin {
+    height: 10px;
+}
+
+.addendum-content {
+    margin: 30px auto;
+    width: 75%;
+    max-height: 100%;
+    background-color: #0f0f0f;
+    border-top: #bd2a1a;
+    border-bottom:#bd2a1a;
+    border-left: #0f0f0f;
+    border-right: #0f0f0f;
+    border-width: 4px;
+    border-style: solid;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.addendum {
+    width: 100%;
+    margin-top: 40px;
+}
+
+.button-wrap {
+    max-width: 200px;
+    min-width: 100px;
+    margin: 30px auto 0;
+}
+
+.text-section {
+    margin: 0 auto;
+    width: 85%;
+}
+
+.mid {
+    margin: 0 auto;
+}
+
+/*
+    ============================================
+    O5 Council Warning Styles
+    ============================================
+*/
+.warning-box {
+    margin: 150px auto;
+    text-align: center;
+}
+
+.warning-box-wrap {
+    padding: 15px;
+    position: relative;
+}
+
+.text-top {
+    font-size: 35px;
+    font-weight: 700;
+}
+
+.text-bottom {
+    margin-top: 30px;
+    font-size: 20px;
+}
+
+.logo-image {
+    height: 310px;
+    width: 310px;
+    margin: -50px -150px;
+    position: absolute;
+    opacity: 0.15;
+}
+
+/*
+    ============================================
+    Collapse Buttons
+    ============================================
+*/
+
 .btn {
-    margin-top: 25px;
+    max-width: 200px;
+    height: 2.5em;
+    text-align: center;
+    border-radius: 0;
+    font-weight: bold;
+    background-color: #0f0f0f;
+    border: none;
+}
+
+.btn:focus {
+    background-color: #0f0f0f;
+}
+
+.btn.active.focus, .btn.active:focus, .btn.focus, .btn:active.focus, .btn:active:focus, .btn:focus {
+    outline: none !important;
+    box-shadow: none !important;
+}
+
+.btn:hover {
+    background-color: #bd2a1a;
+    border: none;
+    color: #0f0f0f;
+}
+
+[data-bs-toggle="collapse"].collapsed .if-not-collapsed {
+    display: none;
+}
+[data-bs-toggle="collapse"]:not(.collapsed) .if-collapsed {
+    display: none;
+}
+
+.card {
+    max-height: 100%;
+    width: 35vw;
+    margin: 10px auto;
+    max-width: 70%;
+    font-size: 1em;
+    background-color: #26211f;
+    text-align: left;
+    border-top: 2px solid #bd2a1a;
+    border-bottom: 2px solid #bd2a1a;
+}
+
+.big-card {
+    width: 90% !important;
+}
+
+/*
+    ============================================
+    SCP Description Grid
+    ============================================
+*/
+
+.col {
+    text-align: center;
+}
+
+.row {
+    margin-top: 50px;
+}
+
+/*
+    ============================================
+    Text Styles
+    ============================================
+*/
+
+.item-num {
+    font-size: 3em;
+    font-weight: 700;
+    margin: 0 auto;
+}
+
+.obj-class {
+    font-size: 1.7em;
+    font-weight: 500;
+}
+
+.white-text {
+    background-color: white;
+    color: white;
 }
